tests/baselines/reference/indexerConstraints2.errors.txt
tests/cases/compiler/indexerConstraints2.ts(9,5): error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
  Property 'b' is missing in type 'A' but required in type 'B'.
tests/cases/compiler/indexerConstraints2.ts(17,5): error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
  Type 'A' is not assignable to type 'B'.
tests/cases/compiler/indexerConstraints2.ts(26,5): error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
  Type 'A' is not assignable to type 'B'.
tests/cases/compiler/indexerConstraints2.ts(46,6): error TS1023: An index signature parameter type must be assignable to 'string | number | symbol'.
  Type 'boolean' is not assignable to type 'string | number | symbol'.
tests/cases/compiler/indexerConstraints2.ts(58,6): error TS1023: An index signature parameter type must be assignable to 'string | number | symbol'.
  Type 'NonIndexableUnion' is not assignable to type 'string | number | symbol'.
    Type 'boolean' is not assignable to type 'string | number | symbol'.
tests/cases/compiler/indexerConstraints2.ts(79,5): error TS1021: An index signature must have a type annotation.


==== tests/cases/compiler/indexerConstraints2.ts (6 errors) ====
    class A { a: number; }
    class B extends A { b: number; }
    
    // Inheritance
    class F {
        [s: string]: B
    }
    class G extends F {
        [n: number]: A
        ~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
!!! error TS2413:   Property 'b' is missing in type 'A' but required in type 'B'.
!!! related TS2728 tests/cases/compiler/indexerConstraints2.ts:2:21: 'b' is declared here.
    }
    
    // Other way
    class H {
        [n: number]: A
    }
    class I extends H {
        [s: string]: B
        ~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
!!! error TS2413:   Type 'A' is not assignable to type 'B'.
    }
    
    // With hidden indexer
    class J {
        [n: number]: {}
    }
    
    class K extends J {
        [n: number]: A;
        ~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
!!! error TS2413:   Type 'A' is not assignable to type 'B'.
        [s: string]: B;
    }
    
    
    type AliasedNumber = number;
    
    interface L {
        [n: AliasedNumber]: A;
    }
    
    type AliasedString = string;
    
    interface M {
        [s: AliasedString]: A;
    }
    
    type AliasedBoolean = boolean;
    
    interface N {
        [b: AliasedBoolean]: A;
         ~
!!! error TS1023: An index signature parameter type must be assignable to 'string | number | symbol'.
!!! error TS1023:   Type 'boolean' is not assignable to type 'string | number | symbol'.
    }
    
    type IndexableUnion = "foo" | "bar";
    
    interface O {
        [u: IndexableUnion]: A;
    }
    
    type NonIndexableUnion = boolean | {};
    
    interface P {
        [u: NonIndexableUnion]: A;
         ~
!!! error TS1023: An index signature parameter type must be assignable to 'string | number | symbol'.
!!! error TS1023:   Type 'NonIndexableUnion' is not assignable to type 'string | number | symbol'.
!!! error TS1023:     Type 'boolean' is not assignable to type 'string | number | symbol'.
    }
    
    type NonIndexableUnion2 = string | number;
    
    interface Q {
        [u: NonIndexableUnion2]: A;
    }
    
    type NonIndexableUnion3 = "foo" | 42;
    
    interface R {
        [u: NonIndexableUnion3]: A;
    }
    
    interface S {
        [u: "foo" | "bar"]: A;
    }
    
    type Key = string;
    interface T {
        [key: Key]
        ~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
    }
    